@@ -42,6 +42,8 @@ import org.openqa.selenium.remote.tracing.DefaultTestTracer;
 import org.openqa.selenium.remote.tracing.Tracer;
 
 import java.net.URISyntaxException;
+import java.time.Instant;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
@@ -57,7 +59,7 @@ import com.google.common.collect.ImmutableMap;
 public class ProxyCdpTest {
 
   private final HttpHandler nullHandler = req -> new HttpResponse();
-  private final Config emptyConfig = new MapConfig(Map.of());
+  private final Config emptyConfig = new MapConfig(Collections.emptyMap());
   private Server<?> proxyServer;
   private SessionMap sessions;
 
@@ -91,7 +93,7 @@ public class ProxyCdpTest {
 
     // Push a session that resolves to the backend server into the session map
     SessionId id = new SessionId(UUID.randomUUID());
-    sessions.add(new Session(id, backend.getUrl().toURI(), new ImmutableCapabilities()));
+    sessions.add(new Session(id, backend.getUrl().toURI(), new ImmutableCapabilities(), new ImmutableCapabilities(), Instant.now()));
 
     // Now! Send a message. We expect it to eventually show up in the backend
     try (WebSocket socket = clientFactory.createClient(proxyServer.getUrl())
@@ -112,7 +114,7 @@ public class ProxyCdpTest {
 
     // Push a session that resolves to the backend server into the session map
     SessionId id = new SessionId(UUID.randomUUID());
-    sessions.add(new Session(id, backend.getUrl().toURI(), new ImmutableCapabilities()));
+    sessions.add(new Session(id, backend.getUrl().toURI(), new ImmutableCapabilities(), new ImmutableCapabilities(), Instant.now()));
 
     // Now! Send a message. We expect it to eventually show up in the backend
     CountDownLatch latch = new CountDownLatch(1);
@@ -144,7 +146,7 @@ public class ProxyCdpTest {
     HttpClient.Factory clientFactory = HttpClient.Factory.createDefault();
     ProxyCdpIntoGrid proxy = new ProxyCdpIntoGrid(clientFactory, sessions);
 
-    Server<?> backend = createBackendServer(new CountDownLatch(1), new AtomicReference<>(), "Cheedar", emptyConfig);
+    Server<?> backend = createBackendServer(new CountDownLatch(1), new AtomicReference<>(), "Cheddar", emptyConfig);
 
     Server<?> secureProxyServer = new NettyServer(new BaseServerOptions(secureConfig), nullHandler, proxy);
 
@@ -152,7 +154,7 @@ public class ProxyCdpTest {
     // Push a session that resolves to the backend server into the session map
     SessionId id = new SessionId(UUID.randomUUID());
 
-    sessions.add(new Session(id, backend.getUrl().toURI(), new ImmutableCapabilities()));
+    sessions.add(new Session(id, backend.getUrl().toURI(), new ImmutableCapabilities(), new ImmutableCapabilities(), Instant.now()));
 
     CountDownLatch latch = new CountDownLatch(1);
     AtomicReference<String> text = new AtomicReference<>();
@@ -167,7 +169,7 @@ public class ProxyCdpTest {
       socket.sendText("Cheese!");
 
       assertThat(latch.await(5, SECONDS)).isTrue();
-      assertThat(text.get()).isEqualTo("Cheedar");
+      assertThat(text.get()).isEqualTo("Cheddar");
     }
 
     secureProxyServer.stop();
